--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <p><strong>karbytes_test_github_hosted_website</strong></p>
 
+<hr>
+
+<p><span style="background:#ffff00">The Uniform Resource Locator of this (GitHub-hosted) website is as follows: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a></span></p>
+
 <p>(The name of the source code file of this live (GitHub-hosted) web page is <strong>index.html</strong>).</p>
 
 <hr>
