--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 
 <p>Test: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/alviso_ghost_town_south_of_fremont_19mar2025.mp4" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/alviso_ghost_town_south_of_fremont_19mar2025.mp4</a></p>
 
+<video controls width="640">
+  <source src="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/alviso_ghost_town_south_of_fremont_19mar2025.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+
 <hr>
 
 <p><span style="background:#ffff00">The Uniform Resource Locator of this (GitHub-hosted) website is as follows: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a></span></p>
