--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   Your browser does not support the video tag.
 </video>
 
+<hr>
+
+Test: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/random_graph_generator.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/random_graph_generator.html</a></p>
 
 <hr>
 
