--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 Test: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/random_graph_generator.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/random_graph_generator.html</a></p>
 
+<p><a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/random_graph_generator.html target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/random_graph_generator.html</a></p>
+
 <hr>
 
 <p><span style="background:#ffff00">The Uniform Resource Locator of this (GitHub-hosted) website is as follows: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a></span></p>
