--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
 
 <hr>
 
+<p><span style="background:#ffff00">The Uniform Resource Locator of this (GitHub-hosted) website is as follows: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a></span></p>
+
+<p>(The name of the source code file of this live (GitHub-hosted) web page is <strong>index.html</strong>).</p>
+
+<hr>
+
+<p><strong>TEST_0: In-Browser Playable Video (.mp4 file)</strong></p>
+
+<hr>
+
+<p>in progress</p>
+
+<hr>
+
 <p>Test: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/alviso_ghost_town_south_of_fremont_19mar2025.mp4" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/alviso_ghost_town_south_of_fremont_19mar2025.mp4</a></p>
 
 <video controls width="640">
