--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p><span style="background:#ffff00">The Uniform Resource Locator of this (GitHub-hosted) website is as follows: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a></span></p>
 
-<p>(The name of the source code file of this live (GitHub-hosted) web page is <strong>index.html</strong>).</p>
+<p>(The name of the source code file of this live (GitHub-hosted) web page is <strong>index.html</strong> and is available as a raw source code file at the following Uniform Resource Locator: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/index.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/index.html</a>).</p>
 
 <hr>
 
