--- a/index.html
+++ b/index.html
@@ -14,14 +14,10 @@
 
 <hr>
 
-<p>in progress</p>
-
-<hr>
-
-<p>Test: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/alviso_ghost_town_south_of_fremont_19mar2025.mp4" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/alviso_ghost_town_south_of_fremont_19mar2025.mp4</a></p>
+<p>The raw MP4 file of the video which is embedded in this web page is available to download at the following Uniform Resource Locator: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/mountain_view_california_31august2024.mp4" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/mountain_view_california_31august2024.mp4</a></p>
 
 <video controls width="640">
-  <source src="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/alviso_ghost_town_south_of_fremont_19mar2025.mp4" type="video/mp4">
+  <source src="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/mountain_view_california_31august2024.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
