--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
 
 <strong>KARBYTES continued...</strong>
 
-<p>Every single web page application which is featured in KARLINA_OBJECT dot WordPress dot Com and in KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com is available as an interactive web application (hosted from karbytes' own dark web server) is available at the following .onion web page address: <a style="background: #000000;color: #00ffff" href="http://qkbrwfubnh4knc6kkhx6uepccavpwezdf2al7w2quepe3qociegsi3yd.onion/" target="_blank" rel="noopener">http://qkbrwfubnh4knc6kkhx6uepccavpwezdf2al7w2quepe3qociegsi3yd.onion/</a></p>
+<p>Every single web page application which is featured in <strong>KARLINA_OBJECT dot WordPress dot Com</strong> and in <strong>KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com</strong> is available as an interactive web application (hosted from karbytes' own dark web server) is available at the following .onion web page address: <a style="background: #000000;color: #00ffff" href="http://qkbrwfubnh4knc6kkhx6uepccavpwezdf2al7w2quepe3qociegsi3yd.onion/" target="_blank" rel="noopener">http://qkbrwfubnh4knc6kkhx6uepccavpwezdf2al7w2quepe3qociegsi3yd.onion/</a></p>
 
+<ul>
+  <li><p>KARLINA_OBJECT dot WordPress dot Com: <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/" target="_blank" rel="noopener">https://karlinaobject.wordpress.com/</a></p></li>
+  <li><p></p>KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/</a></li>
+</ul>
 <hr>
 
 <p>This HTML file was last updated on 02_APRIL_2025. (As of the aforementioned date, the content of this HTML file is featured as a web page displaying clickable hyperlinks at the following public web page address: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a>).</p>
