--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <ul>
   <li><p>KARLINA_OBJECT dot WordPress dot Com: <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/" target="_blank" rel="noopener">https://karlinaobject.wordpress.com/</a></p></li>
-  <li><p></p>KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/</a></li>
+  <li><p>KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/</a></p></li>
 </ul>
 <hr>
 
