--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <strong>KARBYTES continued...</strong>
 
 <p>Every <em>single web page application</em> which is featured in <strong>KARLINA_OBJECT dot WordPress dot Com</strong> and in <strong>KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com</strong> is available as an interactive web application (hosted from karbytes' own dark web server) at the following <strong>.onion</strong> web page address: <a style="background: #000000;color: #00ffff" href="http://qkbrwfubnh4knc6kkhx6uepccavpwezdf2al7w2quepe3qociegsi3yd.onion/" target="_blank" rel="noopener">http://qkbrwfubnh4knc6kkhx6uepccavpwezdf2al7w2quepe3qociegsi3yd.onion/</a></p>
-<p>(Use <strong>The Onion Router (TOR)</strong> to access that .onion web page. Surface web browsers such as Firefox and Chrome are not configured to browse dark web (.onion) web pages).</p>
+<p>(Use <strong>The Onion Router (<a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Tor_(network)" target="_blank" rel="noopener">TOR</a></span>)</strong> to access that .onion web page. Surface web browsers such as Firefox and Chrome are not configured to browse dark web (.onion) web pages).</p>
 <ul>
   <li><p>KARLINA_OBJECT dot WordPress dot Com: <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/" target="_blank" rel="noopener">https://karlinaobject.wordpress.com/</a></p></li>
   <li><p>KARBYTES_FOR_LIFE_BLOG dot WordPress dot Com: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/" target="_blank" rel="noopener">https://karbytesforlifeblog.wordpress.com/</a></p></li>
