--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 </ul>
 <hr>
 
+<p>("External to karbytes" style web page footer):</p>
+
 <p>This HTML file was last updated on 02_APRIL_2025. (As of the aforementioned date, the content of this HTML file is featured as a web page displaying clickable hyperlinks at the following public web page address: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a>).</p>
+
+<hr>
+
+<p>("Internal to karbytes" style web page footer):</p>
+
+<p>This web page was last updated on 02_APRIL_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 
 <hr>
