--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+<!--
+/**
+ * file: index.html
+ * type: Hyper-Text-Markup-Language
+ * author: karbytes
+ * date: 02_APRIL_2025
+ * license: PUBLIC_DOMAIN
+ */
+ -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>karbytes_test_github_hosted_website</title>
+    <style>
+        body {
+          font-style: sans-serif;
+        }
+    </style>
+</head>
+<body>
 <hr>
 
 <p><strong>karbytes_test_github_hosted_website</strong></p>
@@ -58,3 +79,4 @@
 <p>This web page was last updated on 02_APRIL_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 
 <hr>
+</body>
