--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>karbytes_test_github_hosted_website</title>
     <style>
         body {
-          font-style: sans-serif;
+          font-family: sans-serif;
         }
     </style>
 </head>
