--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * file: index.html
  * type: Hyper-Text-Markup-Language
  * author: karbytes
- * date: 02_APRIL_2025
+ * date: 04_APRIL_2025
  * license: PUBLIC_DOMAIN
  */
  -->
@@ -25,7 +25,7 @@
 
 <hr>
 
-<p><span style="background:#ffff00">The Uniform Resource Locator of <strong>this (GitHub-hosted) website</strong> is as follows: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a></span></p>
+<p><span style="background:#ffff00">The Uniform Resource Locator of <strong>this (GitHub-hosted) website</strong> is as follows: <a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a></span></p>
 
 <p>(The name of the source code file of this live (GitHub-hosted) web page is <strong>index.html</strong> and is available as a raw source code file at the following Uniform Resource Locator: <a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/index.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/karbytes_test_github_hosted_website/main/index.html</a>).</p>
 
@@ -70,13 +70,13 @@
 
 <p>("External to karbytes" style web page footer):</p>
 
-<p>This HTML file was last updated on 02_APRIL_2025. (As of the aforementioned date, the content of this HTML file is featured as a web page displaying clickable hyperlinks at the following public web page address: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a>).</p>
+<p>This HTML file was last updated on 04_APRIL_2025. (As of the aforementioned date, the content of this HTML file is featured as a web page displaying clickable hyperlinks at the following public web page address: <a style="background: #000000;color: #00ff00" href="https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/" target="_blank" rel="noopener">https://karlinarayberinger.github.io/karbytes_test_github_hosted_website/</a>).</p>
 
 <hr>
 
 <p>("Internal to karbytes" style web page footer):</p>
 
-<p>This web page was last updated on 02_APRIL_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 04_APRIL_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 
 <hr>
 </body>
